# morti_score

./: .dockerignore  .env.example  .flake8  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py
app/: main.py
app/api/: deps.py  router.py
app/api/v1/endpoints/: admin.py  matches.py  predictions.py  standings.py  teams.py
app/bot/: telegram_bot.py
app/core/: config.py  logging.py  security.py
app/db/: redis.py  session.py
app/models/: __init__.py  match.py  standing.py  team.py
app/repositories/: match.py  standing.py  team.py
app/schemas/: __init__.py  match.py  prediction.py  standing.py  team.py
app/services/: match.py  prediction.py  seed.py  standings.py  team.py
app/services/prediction/: __init__.py  cache.py  constants.py  context.py  errors.py  score_matrix.py  service.py  types.py
app/services/prediction/models/: __init__.py  basic_poisson.py  elo.py  helpers.py  improved_poisson.py
app/static/css/: styles.css
app/tasks/: background.py
app/templates/: dashboard.html
app/tests/: test_db_session.py
data/: matches.json  teams.json
docs/: architecture.md  modeling.md
scripts/: run_migrations.py  seed_data.py
tests/: conftest.py  test_admin_security.py  test_dashboard.py  test_db_session.py  test_match_status_enum.py  test_matches.py  test_predictions.py  test_redis.py  test_run_migrations.py  test_settings.py  test_teams.py
