[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morti-score"
version = "0.1.0"
description = "FastAPI football analytics backend with dashboard, Poisson/Elo predictions, PostgreSQL, Redis and Alembic"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Mortifertis" }]
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "fastapi>=0.115.6,<1.0.0",
  "greenlet>=3.1.1,<4.0.0",
  "jinja2>=3.1.4,<4.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "pydantic>=2.10.4,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "redis>=5.2.1,<6.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
]


[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "black>=24.10.0,<25.0.0",
  "isort>=5.13.2,<6.0.0",
  "pytest>=8.3.4,<9.0.0",
  "pytest-asyncio>=0.25.0,<1.0.0",
  "flake8>=7.1.1,<8.0.0",
  "ruff>=0.8.4,<1.0.0",
]
bot = [
  "aiogram>=3.13.1,<4.0.0",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["app"]
force_sort_within_sections = true

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
ignore = ["B008"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"scripts/run_migrations.py" = ["I001"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]